--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.12.15",
+    "auto-py-to-exe>=2.48.1",
     "dotenv>=0.9.9",
-    "pandas>=2.3.1",
+    "pip>=25.2",
     "pydantic>=2.11.7",
 ]
