--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pydantic>=2.11.7",
     "kit-api @ git+https://github.com/lok101/kit-vending-api.git",
+    "aiogram>=3.24.0",
 ]
