--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp>=3.12.15
+aiogram>=3.12.0
 python-dotenv>=1.0.1
 pydantic>=2.11.7
 kit-api @ git+https://github.com/lok101/kit-vending-api.git
